--- a/templates/fresher/single.html
+++ b/templates/fresher/single.html
@@ -21,14 +21,16 @@
               <option value="2">2</option>
               <option value="3">3</option>
               <option value="4">4</option>
+              <option value="1">5</option>
+              <option value="2">6</option>
+              <option value="3">7</option>
+              <option value="4">8</option>
             </select>
           </div>
         </div>
         <hr>
         <button type="button" id="add-button" value="{{recipe.id}}" class="btn btn-success fw500">Add to
           basket</button>
-        <button type="button" id="add-button" value="{{recipe.id}}" class="btn btn-light fw500">Add to
-          Favorites</button>
       </div>
     </div>
     <div class="col-md-7 col-lg-7 p-0">
