--- a/templates/fresher/index.html
+++ b/templates/fresher/index.html
@@ -3,15 +3,18 @@
 {% block content %}
 
 <div class="container">
-  <div class="alert alert-primary fw600 rounded-0 border-0 pb-3" role="alert">
-    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-info-circle me-2"
-      viewBox="0 0 16 16">
-      <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
-      <path
-        d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
-    </svg>
-    COVID-19 - <u>Click here for our latest updates</u> on our freshers, website and contact centre. Thank you for
-    your patience and support.
+ <div class="container md-3">
+    <div class="row p-10 pb-0 pe-lg-0 pt-lg-1 align-items-center rounded-3 border shadow-lg">
+      <div class="col-lg-7 p-3 p-lg-5 pt-lg-1">
+        <h1 class="display-3 fw-bold lh-4">Don't just cook it, Fresher it!</h1>
+        <p class="lead">Our recipes are created by Fresher to bring you the fullest flavour and the most succulent dishes for all occasions… from family meals & snacks to dinner party entertaining.</p>
+      </div>
+      <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden shadow-lg">
+          <img class="rounded-lg-3" src="https://diatribe.org/sites/default/files/images/healthy%20eating.jpg" alt="" width="640">
+      </div>
+    </div>
+  </div>
+    
   </div>
   <div class="container">
     <div class="row">
