--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <title>{% block title %}Fresher{% endblock %}</title>
@@ -15,9 +16,10 @@
   <link rel="stylesheet" href="{% static 'core/css/base.css' %}">
   <link rel="stylesheet" href="{% block stylesheet %}{% endblock %}">
 </head>
+
 <body>
   <header class="pb-3">
-    <nav class="navbar navbar-expand-md navbar-light style=" background-color: #a8afb7;">
+    <nav class="navbar navbar-expand-md navbar-light style=" background-color: #1CD5EA;">
       <div class="container-fluid px-md-4">
         <div class="d-flex w-100 navbar-collapse">
           <a class="navbar-brand d-flex-inline" href="/">
@@ -31,7 +33,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle d-none d-md-block fw500" href="#" id="navbarDropdown" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
-                All
+                Diet Type
                 <i class="ps-1"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-chevron-down" viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
@@ -39,7 +41,7 @@
                   </svg></i>
               </a>
               <ul class="dropdown-menu rounded-0 border-0" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="{% url "fresher:fresher_home" %}">All</a></li>
+                <li><a class="dropdown-item" href="{% url "fresher:fresher_home" %}">All Types</a></li>
                 {% for c in categories %}
                 <li {% if category.slug == c.slug %}class="selected" {% endif %}>
                   <a class="dropdown-item" href="{{ c.get_absolute_url }}">{{ c.name|title }}</a>
